Created Storage Guide documentation

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -45,5 +45,8 @@
     "graphql",
     "astro"
   ],
-  "editor.tabSize": 2
+  "editor.tabSize": 2,
+  "githubPullRequests.ignoredPullRequestBranches": [
+    "main"
+  ]
 }
